logs/dag_id=RestCountries/run_id=manual__2024-05-22T08:33:18.030325+00:00/task_id=load_countries_info/attempt=1.log
[2024-05-22T08:33:37.720+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: RestCountries.load_countries_info manual__2024-05-22T08:33:18.030325+00:00 [queued]>
[2024-05-22T08:33:37.724+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: RestCountries.load_countries_info manual__2024-05-22T08:33:18.030325+00:00 [queued]>
[2024-05-22T08:33:37.724+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 1
[2024-05-22T08:33:37.730+0000] {taskinstance.py:1382} INFO - Executing <Task(_PythonDecoratedOperator): load_countries_info> on 2024-05-22 08:33:18.030325+00:00
[2024-05-22T08:33:37.733+0000] {standard_task_runner.py:57} INFO - Started process 3938 to run task
[2024-05-22T08:33:37.736+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'RestCountries', 'load_countries_info', 'manual__2024-05-22T08:33:18.030325+00:00', '--job-id', '37', '--raw', '--subdir', 'DAGS_FOLDER/RestCountries.py', '--cfg-path', '/tmp/tmp317tuszo']
[2024-05-22T08:33:37.738+0000] {standard_task_runner.py:85} INFO - Job 37: Subtask load_countries_info
[2024-05-22T08:33:37.768+0000] {task_command.py:416} INFO - Running <TaskInstance: RestCountries.load_countries_info manual__2024-05-22T08:33:18.030325+00:00 [running]> on host b8721ae4b73c
[2024-05-22T08:33:37.807+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='RestCountries' AIRFLOW_CTX_TASK_ID='load_countries_info' AIRFLOW_CTX_EXECUTION_DATE='2024-05-22T08:33:18.030325+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-05-22T08:33:18.030325+00:00'
[2024-05-22T08:33:37.808+0000] {RestCountries.py:35} INFO - load countries info
[2024-05-22T08:33:37.812+0000] {base.py:73} INFO - Using connection ID 'redshift_dev_db' for task execution.
[2024-05-22T08:33:43.301+0000] {logging_mixin.py:154} INFO - syntax error at or near "Ivoire"
LINE 1: ...1.rest_countries_info VALUES ('Republic of Côte d'Ivoire', 2...
                                                             ^
[2024-05-22T08:33:43.313+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/decorators/base.py", line 221, in execute
    return_value = super().execute(context)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 192, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 209, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/RestCountries.py", line 49, in load_countries_info
    cur.execute(sql)
psycopg2.errors.SyntaxError: syntax error at or near "Ivoire"
LINE 1: ...1.rest_countries_info VALUES ('Republic of Côte d'Ivoire', 2...
                                                             ^

[2024-05-22T08:33:43.347+0000] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=RestCountries, task_id=load_countries_info, execution_date=20240522T083318, start_date=20240522T083337, end_date=20240522T083343
[2024-05-22T08:33:43.361+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 37 for task load_countries_info (syntax error at or near "Ivoire"
LINE 1: ...1.rest_countries_info VALUES ('Republic of Côte d'Ivoire', 2...
                                                             ^
; 3938)
[2024-05-22T08:33:43.373+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2024-05-22T08:33:43.386+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
